unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-declaration2.js
a = async function () { let await; }
